replaced deprecated URL() with URI#.toURL()